Use token from manifest file rather than one burned in to source code. Also change name of key used to enter gitlab private token to something more specific.

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -17,7 +17,7 @@
       "required": true
     },
     {
-      "name": "apiKey",
+      "name": "gitlab_private_token",
       "type": "text",
       "required": true,
       "secure": true
